# vacancies_parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deliveryhero.html  docker-compose.yml  getyourguide.html  pyproject.toml  wise.html  zalando.html
.github/workflows/: run-scraper.yml
app/: __init__.py  backfill.py  db.py  fetcher.py  logging_config.py  matcher.py  normalizer.py  notifier.py  pagination.py  pipeline.py  run_once.py  settings.py  source_loader.py  store.py  types.py  validate_sources.py
app/parsers/: __init__.py  base.py  common.py  generic_html.py  generic_json.py  greenhouse.py  lever.py  smartrecruiters.py  teamtailor.py  workable.py  workday.py
config/sources/: asos.json  booking.json  deliveroo.json  deliveryhero.json  example_generic.json  example_generic_json.json  example_greenhouse.json  example_lever.json  example_smartrecruiters.json  example_teamtailor.json  example_workable.json  example_workday.json  getyourguide.json  grammarly.json  hellofresh.json  jetbrains.json  n26.json  payrails.json  picnic.json  sap.json  sennder.json  so1.json  soundcloud.json  spotify.json  traderepublic.json  trivago.json  wise.json  zalando.json
sql/: schema.sql
tests/fixtures/parsers/: generic.html  generic_json.json  (+6 more)
tests/integration/: test_notifier.py  test_parsers.py  test_pipeline_run_logging.py
tests/unit/: test_dedupe.py  test_fetcher_block_detection.py  test_generic_parser_selectors.py  test_matcher.py  test_pagination.py  test_source_loader.py
vacancies_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
